[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "dspd"
version         = "1.0.0"
description     = "DSPD: Device-Bound Stateless Password Derivation Scheme"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Talha R.", email = "" }]
keywords        = ["password", "security", "cryptography", "argon2", "key-derivation", "dspd"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies    = [
    "argon2-cffi>=23.1.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
dspd = "dspd.cli:main"

[project.urls]
Homepage      = "https://github.com/YOUR_USERNAME/dspd"
Repository    = "https://github.com/YOUR_USERNAME/dspd"
Documentation = "https://github.com/YOUR_USERNAME/dspd#readme"
Issues        = "https://github.com/YOUR_USERNAME/dspd/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dspd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
